# salbotics-iiot-aluminium-demo

./: .env.example  .gitignore  INSTALL.md  PROGRESS.md  README.md  SECURITY_PROFILE.md  docker-compose.multi.yml  docker-compose.yml  pyproject.toml  tmp_grafana_aluminium_quench_after_checks.json  tmp_grafana_aluminium_quench_checks.json
.claude/: settings.local.json
.github/workflows/: ci.yml  integration.yml  release.yml
agentic/: README.md  prompts.md
contracts/: alert_payload.schema.json  event_payload.schema.json  register_map.json  telemetry_payload.schema.json  topic_contract.md
db/migrations/: 001_init.sql  002_alerts.sql  003_site_config.sql  004_api_views.sql  005_business_context.sql  006_alert_enhancements.sql  007_fix_kpi_view.sql  008_aluminium_decision_views.sql
docs/: api-reference.md  architecture.md  data-model.md  stack-testing-tutorial.md
docs/adr/: 001-timescaledb-over-influxdb.md  002-fastapi-svelte-frontend.md  003-alert-three-layer.md  004-isa95-topic-hierarchy.md
docs/demo/: aluminium_profile_line_spec.md
docs/recovery/: aluminium_demo_checkpoint_01_baseline.md  aluminium_demo_checkpoint_03_contract_simulator.md  aluminium_demo_checkpoint_04_db_validation.md  aluminium_demo_checkpoint_05_api_runtime.md  aluminium_demo_checkpoint_06_svelte_validation.md  aluminium_demo_checkpoint_07_grafana_validation.md  aluminium_demo_checkpoint_08_end_to_end_scenario_proof.md  aluminium_demo_checkpoint_09_docs_cleanup.md  aluminium_demo_checkpoint_10_handoff.md
docs/runbooks/: 01-quickstart.md  02-adding-new-asset.md  03-alert-tuning.md  04-scaling-to-tier2.md  05-scaling-to-tier3.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/src/: app.html
helm/nexus/: Chart.yaml  values.yaml
infra/mosquitto/: aclfile  mosquitto.conf  passwd
output/doc/: iiot_swot_analysis.md
services/alerting/: Dockerfile  detector.py  router.py  (+1 more)
(+189 files in other folders)
