[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-iiot-platform"
version = "0.1.0"
description = "NEXUS — Industrial Intelligence Platform: From Factory Floor to Decision Desk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # existing pipeline
  "jsonschema>=4.23.0",
  "paho-mqtt>=2.1.0",
  "psycopg[binary]>=3.2.6",
  "pymodbus>=3.8.3",
  # Phase 3 — REST API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "psycopg-pool>=3.2.0",
  # Phase 2 — Alert detection (ML)
  "scikit-learn>=1.5.0",
  "numpy>=2.0.0",
  # Phase 3 — HTTP client (integration tests + webhooks)
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "requests>=2.32.3",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that exercise the compose-based stack",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]
